// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/manager/github-actions/extract extractPackageFile() extracts multiple image lines from docker_container 1`] = `
Array [
  Object {
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "replicated/dockerfilelint",
    "managerData": Object {
      "lineNumber": 11,
    },
    "versionScheme": "docker",
  },
  Object {
    "commitMessageTopic": "Node.js",
    "currentDigest": "sha256:7b65413af120ec5328077775022c78101f103258a1876ec2f83890bce416e896",
    "currentValue": "6",
    "datasource": "docker",
    "depName": "node",
    "managerData": Object {
      "lineNumber": 36,
    },
    "versionScheme": "docker",
  },
]
`;

exports[`lib/manager/github-actions/extract extractPackageFile() extracts multiple image lines from yaml configuration file 1`] = `
Array [
  Object {
    "currentDigest": undefined,
    "currentValue": undefined,
    "datasource": "docker",
    "depName": "replicated/dockerfilelint",
    "managerData": Object {
      "lineNumber": 17,
    },
    "versionScheme": "docker",
  },
  Object {
    "commitMessageTopic": "Node.js",
    "currentDigest": "sha256:7b65413af120ec5328077775022c78101f103258a1876ec2f83890bce416e896",
    "currentValue": "6",
    "datasource": "docker",
    "depName": "node",
    "managerData": Object {
      "lineNumber": 31,
    },
    "versionScheme": "docker",
  },
]
`;
